made changes to navbar across all pages to make nav-brand and links all align correctly/replaced gallery layout

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -1,17 +1,48 @@
 /*------------------------------------------ Gallery -----------------------------------------*/
 
-.gallery-wrapper {
-  margin-top: 100px;
-  /* Adjust the value as needed */
+div.gallery {
+  border: 1px solid #ccc;
 }
 
-.banner {
-  font-family: var(--titlefont);
-  background: -webkit-linear-gradient(to right, var(--colour4), var(--colour1), var(--colour2));
-  background: linear-gradient(to right, var(--colour4), var(--colour1), var(--colour4));
+div.gallery:hover {
+  border: 1px solid #777;
 }
 
-img {
-  vertical-align: middle;
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
 
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.responsive {
+  padding: 0 6px;
+  float: left;
+  width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
